Fixed issue #48 Updated some static text Updated .gitignore Updated the news builder in a way that images are uploaded in full quality

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -37,7 +37,7 @@ element.blog_carousel {
     display: block;
 }
 
-.news-img {
+.news-div:has(element.blog_carousel) ~ .news-img {
     display: none;
 }
 
