--- a/views/datenschutz.ejs
+++ b/views/datenschutz.ejs
@@ -41,13 +41,7 @@
         </style>
     </head>
     <body>
-        <%
-        let link_mitglied;
-        if (typeof user !== "undefined" && user !== null) {
-            user?.valid ? link_mitglied = "/profile?exec=profileMembership" : link_mitglied = "/login";
-        } else {
-            link_mitglied = "/login";
-        }; %>
+        <% let link_mitglied; if (typeof user !== "undefined" && user !== null && user.valid) { link_mitglied = "/profile?exec=profileMembership" } else { link_mitglied = "/spenden#scrollToMembership"; }; %>
         <%- include("./snippets/header.ejs", {
             link_mitglied
         }) %>
