--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -13,13 +13,7 @@
         <script type="text/javascript" src="/js/donate.js" defer></script>
     </head>
     <body>
-        <%
-        let link_mitglied;
-        if (typeof user !== "undefined" && user !== null) {
-            user?.valid ? link_mitglied = "/profile?exec=profileMembership" : link_mitglied = "/login";
-        } else {
-            link_mitglied = "/login";
-        }; %>
+        <% let link_mitglied; if (typeof user !== "undefined" && user !== null && user.valid) { link_mitglied = "/profile?exec=profileMembership" } else { link_mitglied = "/spenden#scrollToMembership"; }; %>
         <%- include("./snippets/header.ejs", {
             link_mitglied
         }) %>
@@ -33,44 +27,67 @@
                 title: donate.titel,
                 subtitle: "",
                 cta_text: "Spenden",
-                cta_link: "#scrollToDonate",
+                cta_link: "/spenden#scrollToDonate",
                 origin_url
             }) %>
-            <div id="scrollToDonate" class="donate-wrapper">
-                <h1 class="donate-title">Ich helfe mit</h1>
-                <div class="donate-decider">
-                    <button type="button" class="donate-decider-btn active" id="donate_switch_onetime">Einmalig</button>
-                    <button type="button" class="donate-decider-btn" id="donate_switch_member">Regelmässig</button>
+            <form id="scrollToDonate" class="donate-form">
+                <h1 class="donate-title">Spenden</h1>
+                <p class="donate-description">Bitte übermittle uns deine Daten über das Formular unten, damit wir dir eine Spendenbescheinigung ausstellen können.</p>
+                <div class="donate-wrapper">
+                    <div class="donate-qr-wrapper">
+                        <img src="/img/common/donate-qr-code.png" alt="QR Code Spenden" class="donate-qr">
+                        <p class="donate-qr-text">
+                            CH 20 0900 0000 6184 2154 0<br>
+                            zurich - <wbr>meets - <wbr>tanzania<br>
+                            8049 Zürich<br>
+                        </p>
+                    </div>
+                    <div class="donate-center donate-form-wrapper">
+                        <div class="donate-name-pair">
+                            <div class="donate-name-pair-inner">
+                                <label class="donate-label" for="donate-name">Name:</label>
+                                <input class="donate-input" type="text" required autocomplete="given-name" id="donate-name">
+                            </div>
+                            <div class="donate-name-pair-inner">
+                                <label class="donate-label" for="donate-family-name">Nachname:</label>
+                                <input class="donate-input" type="text" required autocomplete="family-name" id="donate-family-name">
+                            </div>
+                        </div>
+                        <div class="donate-form-pair">
+                            <label class="donate-label" for="donate-email">E-Mail:</label>
+                            <input class="donate-input" type="email" required autocomplete="email" id="donate-email">
+                        </div>
+                        <div class="donate-form-pair">
+                            <label class="donate-label" for="donate-usage-type">Wähle einen Verwendungszweck:</label>
+                            <select class="donate-input" name="donate-usage-type" id="donate-usage-type">
+                                <option class="donate-option" value="Allgemeine Spende">Allgemeine Spende</option>
+                                <option class="donate-option" value="20f40">20f40</option>
+                                <option class="donate-option" value="Mbuzi">Mbuzi</option>
+                                <option class="donate-option" value="Meducation">Meducation</option>
+                                <option class="donate-option" value="Med. Geräte / Infrastruktur">Med. Geräte / Infrastruktur</option>
+                            </select>
+                        </div>
+                        <button type="submit" id="donate-submit" class="donate-btn hero-cta">Abschicken</button>
+                    </div>
                 </div>
-                <div class="donate-onetime active">
-                    <div class="donate-amount">
-                        <div class="donate-currency">CHF</div>
-                        <input type="number" name="donate50" class="donate-number" value="50" disabled />
-                    </div>
-                    <div class="donate-amount">
-                        <div class="donate-currency">CHF</div>
-                        <input type="number" name="donate80" class="donate-number" value="80" disabled />
-                    </div>
-                    <div class="donate-amount">
-                        <div class="donate-currency">CHF</div>
-                        <input type="number" name="donate120" class="donate-number" value="120" disabled />
-                    </div>
-                    <div class="donate-amount">
-                        <div class="donate-currency">CHF</div>
-                        <input type="number" id="donate_custom" class="donate-number" placeholder="___" min="1" max="100000000" />
-                    </div>
-                </div>
-                <div class="donate-membership">
+            </form>
+            <form id="scrollToMembership" class="donate-form">
+                <h1 class="donate-title">Mitglied werden</h1>
+                <div class="donate-center">
                     <div class="donate-amount">
                         <div class="donate-currency">CHF / Monat</div>
-                        <input type="number" name="donate20" class="donate-number" value="50" disabled />
+                        <input type="number" class="donate-number" value="50" disabled="">
                     </div>
+                    <button type="submit" id="membership-submit" class="donate-btn hero-cta">Abonnieren</button>
                 </div>
-                <div class="donate-btn-wrapper">
-                    <button type="button" class="hero-cta donate-btn" id="donate_btn_iban" data-redir="https://ik.imagekit.io/zmt/pdf/Rechnung%20Spendenkonto.pdf">Jetzt Spenden</button>
-                    <button type="button" class="hero-cta donate-btn secondary" id="donate_btn">Online Spenden</button>
-                </div>
+            </form>
+            <% if (typeof user !== "undefined" && user !== null && user.valid) { %>
+            <div class="invisible">
+                <p id="donate-prefilled-name"><%= user.name %></p>
+                <p id="donate-prefilled-family-name"><%= user.family_name %></p>
+                <p id="donate-prefilled-email"><%= user.email %></p>
             </div>
+            <% }; %>
         </main>
         <%- include("./snippets/footer.ejs", {
             origin_url: origin_url
