--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,13 +13,7 @@
         <script type="text/javascript" src="/js/calendar.js" defer></script>
     </head>
     <body>
-        <%
-        let link_mitglied;
-        if (typeof user !== "undefined" && user !== null) {
-            user?.valid ? link_mitglied = "/profile?exec=profileMembership" : link_mitglied = "/login";
-        } else {
-            link_mitglied = "/login";
-        }; %>
+        <% let link_mitglied; if (typeof user !== "undefined" && user !== null && user.valid) { link_mitglied = "/profile?exec=profileMembership" } else { link_mitglied = "/spenden#scrollToMembership"; }; %>
         <%- include("./snippets/header.ejs", {
             link_mitglied
         }) %>
