--- a/views/news_archiv.ejs
+++ b/views/news_archiv.ejs
@@ -12,13 +12,7 @@
         }) %>
     </head>
     <body>
-        <%
-        let link_mitglied;
-        if (typeof user !== "undefined" && user !== null) {
-            user?.valid ? link_mitglied = "/profile?exec=profileMembership" : link_mitglied = "/login";
-        } else {
-            link_mitglied = "/login";
-        }; %>
+        <% let link_mitglied; if (typeof user !== "undefined" && user !== null && user.valid) { link_mitglied = "/profile?exec=profileMembership" } else { link_mitglied = "/spenden#scrollToMembership"; }; %>
         <%- include("./snippets/header.ejs", {
             link_mitglied
         }) %>
