--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,13 +13,7 @@
         <link rel="stylesheet" href="/css/static.css">
         <script type="text/javascript" src="/js/profile.js" defer></script>
     </head>
-    <body><%
-        let link_mitglied;
-        if (typeof user !== "undefined" && user !== null) {
-            user?.valid ? link_mitglied = "/profile?exec=profileMembership" : link_mitglied = "/login";
-        } else {
-            link_mitglied = "/login";
-        }; %>
+    <body><% let link_mitglied; if (typeof user !== "undefined" && user !== null && user.valid) { link_mitglied = "/profile?exec=profileMembership" } else { link_mitglied = "/spenden#scrollToMembership"; }; %>
        <%- include("./snippets/header.ejs", {
             link_mitglied
         }) %>
