--- a/views/snippets/nav.ejs
+++ b/views/snippets/nav.ejs
@@ -1,6 +1,6 @@
 <nav>
             <div class="w750 w1000" id="nav_tab">
-                <% let link_mitglied; if (typeof user !== "undefined" && user !== null) { user?.valid ? link_mitglied = "/profile?exec=profileMembership" : link_mitglied = "/spenden?exec=toggleDonateForm#scrollToDonate"; } else { link_mitglied = "/login"; }; %>
+                <% let link_mitglied; if (typeof user !== "undefined" && user !== null && user.valid) { link_mitglied = "/profile?exec=profileMembership" } else { link_mitglied = "/spenden#scrollToMembership"; }; %>
                 <ul class="n-t">
                     <li>
                         <div class="n-t-details">
