--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,8 +10,8 @@
             env: env,
             sitetype: sitetype
         }) %>
-        <link rel="stylesheet" href="/css/contact.css">
-        <script type="text/javascript" src="/js/contact.js" defer></script>
+        <link rel="stylesheet" href="/css/contact.min.css">
+        <script type="text/javascript" src="/js/contact.min.js" defer></script>
     </head>
     <body><% let link_mitglied; if (typeof user !== "undefined" && user !== null && user.valid) { link_mitglied = "/profile?exec=profileMembership" } else { link_mitglied = "/spenden#scrollToMembership"; }; %>
        <%- include("./snippets/header.ejs", {
