--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,8 +10,8 @@
             env: env,
             sitetype: sitetype
         }) %>
-        <script type="text/javascript" src="/js/login.js" defer></script>
-        <link rel="stylesheet" href="/css/login.css" />
+        <script type="text/javascript" src="/js/login.min.js" defer></script>
+        <link rel="stylesheet" href="/css/login.min.css" />
         <meta redirect="<%- redir %>" id="redir" />
     </head>
     <body>
