--- a/views/snippets/footer.ejs
+++ b/views/snippets/footer.ejs
@@ -21,11 +21,11 @@
     <div class="f-links">
         <div class="f-l-social">
             <h2>Folge uns!</h2>
-            <a href="https://www.instagram.com/zurichmeetstanzania/">Instagram</a>
-            <a href="https://www.facebook.com/profile.php?id=100064463715451">Facebook</a>
+            <a href="https://www.instagram.com/zurichmeetstanzania/" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com/profile.php?id=100064463715451" target="_blank">Facebook</a>
             <h2>Weiteres</h2>
-            <a href="https://shop.unikat-hoengg.ch/produkte/zurichmeetstanzania-60?d=1">Unikat Höngg</a>
-            <a href="https://www.timondev.com/">Seite des Erstellers</a>
+            <a href="https://shop.unikat-hoengg.ch/produkte/zurichmeetstanzania-60?d=1" target="_blank">Unikat Höngg</a>
+            <a href="https://www.timondev.com/" target="_blank">Seite des Erstellers</a>
             <a href="<% origin_url %>/private/management">Verwaltung</a>
         </div>
         <div class="f-l-r">
