--- a/views/chirurgie.ejs
+++ b/views/chirurgie.ejs
@@ -10,7 +10,7 @@
             env: env,
             sitetype: sitetype
         }) %>
-        <link rel="stylesheet" href="/css/blog.css" />
+        <link rel="stylesheet" href="/css/blog.min.css" />
         <style type="text/css">
             @media screen and (min-width: 1000px) {
                 .hero-img {
