--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -10,8 +10,8 @@
             env: env,
             sitetype: sitetype
         }) %>
-        <link rel="stylesheet" href="/css/gallery.css" />
-        <script type="text/javascript" src="/js/gallery.js" defer></script>
+        <link rel="stylesheet" href="/css/gallery.min.css" />
+        <script type="text/javascript" src="/js/gallery.min.js" defer></script>
     </head>
     <body>
         <% let link_mitglied; if (typeof user !== "undefined" && user !== null && user.valid) { link_mitglied = "/profile?exec=profileMembership" } else { link_mitglied = "/spenden#scrollToMembership"; }; %>
