--- a/views/snippets/head.ejs
+++ b/views/snippets/head.ejs
@@ -16,19 +16,19 @@
 <meta property="og:image" content="/img/logo.png" />
 <meta property="og:image:type" content="image/png" />
 <link rel="icon" type="image/ico" href="/img/logo.ico" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><%
-        if (sitetype !== "error") { %>
-<link rel="stylesheet" href="/css/style.css" /><% }; if (sitetype === "private") { %>
-<link rel="stylesheet" href="/css/private.css" /><% } else if (sitetype === "blog") { %>
-<link rel="stylesheet" href="/css/blog.css" />
-<script type="text/javascript" src="/js/blog.js" defer></script>
-<% }
-        else if (sitetype === "static") { %>
-<link rel="stylesheet" href="/css/static.css" /><% }; if (sitetype !== "error") { %>
-<link rel="stylesheet" href="/css/fonts.min.css" />
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/timonjs@1.0.5/dist/timon.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-<script type="text/javascript" src="/js/global.js" defer></script>
+<script type="text/javascript" src="/js/global.min.js" defer></script>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><%
+        if (sitetype !== "error") { %>
+<link rel="stylesheet" href="/css/style.min.css" /><% }; if (sitetype === "private") { %>
+<link rel="stylesheet" href="/css/private.min.css" /><% } else if (sitetype === "blog") { %>
+<link rel="stylesheet" href="/css/blog.min.css" />
+<script type="text/javascript" src="/js/blog.min.js" defer></script>
+<% }
+        else if (sitetype === "static") { %>
+<link rel="stylesheet" href="/css/static.min.css" /><% }; if (sitetype !== "error") { %>
+<link rel="stylesheet" href="/css/fonts.min.css" />
 <% };
         if (user?.valid) { %>
 <script type="text/javascript">
@@ -42,9 +42,9 @@
         console.log("%cVisit https://www.timondev.com", b("#fff", 1, "35%"));
     }
 </script>
-<script type="text/javascript" src="/js/customNotification.js" defer></script>
-<script type="text/javascript" src="/js/executables.js" defer></script>
-<script type="text/javascript" src="/js/cookieConsent.js"></script>
+<script type="text/javascript" src="/js/customNotification.min.js" defer></script>
+<script type="text/javascript" src="/js/executables.min.js" defer></script>
+<script type="text/javascript" src="/js/cookieConsent.min.js"></script>
 <% if (env === "prod") { %>
 <script>
     window.dataLayer = window.dataLayer || [];
