--- a/views/newsletter_abmeldung.ejs
+++ b/views/newsletter_abmeldung.ejs
@@ -95,9 +95,9 @@
                 getQuery(".email").on("submit", async (e) => {
                     e.preventDefault();
                     const val = email.value;
-                    if (val === "" || val.replace("@", "").replaceAll(".", "") === val) return warnNotification("Du musst deine E-Mail eingeben.");
+                    if (val === "" || val.replace("@", "").replaceAll(".", "") === val) return alert("Du musst deine E-Mail eingeben.");
                     const res = await post("/newsletter/requestCode", { email: val });
-                    if (res.status !== 200) return errorNotification("Etwas hat nicht geklappt: " + res.message);
+                    if (res.status !== 200) return alert("Etwas hat nicht geklappt: " + res.message);
                     getQuery(".email").removeClass("email-before");
                     getQuery(".first-btn").hide();
                     getQuery(".code").flex();
@@ -105,14 +105,14 @@
 
                 getQuery(".code").on("submit", async (e) => {
                     e.preventDefault();
-                    if (code.value.split("").length !== 16) return warnNotification("Bitte gib einen gültigen Code ein.");
+                    if (code.value.split("").length !== 16) return alert("Bitte gib einen gültigen Code ein.");
                     const res = await post("/newsletter/submitCode", {
                         code: code.value,
                         email: email.value,
                     });
-                    if (res.status !== 200) return errorNotification("Etwas hat nicht geklappt: " + res.message);
-                    successNotification("Das hat geklappt! Du wirst jetzt nicht mehr Benachrichtigt. (Sie werden automatisch weitergeleitet)");
-                    setTimeout(() => {window.location.href = window.location.origin}, 5000);
+                    if (res.status !== 200) return alert("Etwas hat nicht geklappt: " + res.message);
+                    await alert("Das hat geklappt! Du wirst jetzt nicht mehr Benachrichtigt. (Sie werden automatisch weitergeleitet)");
+                    window.location.href = window.location.origin
                 });
             </script>
         </main>
