Created instagram embed 2

--- a/views/snippets/head.ejs
+++ b/views/snippets/head.ejs
@@ -21,7 +21,7 @@
 <script type="text/javascript" src="/js/global.min.js" defer></script>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><%
         if (sitetype !== "error") { %>
-<link rel="stylesheet" href="/css/style.min.css" /><% }; if (sitetype === "private") { %>
+<link rel="stylesheet" href="/css/style.css" /><% }; if (sitetype === "private") { %>
 <link rel="stylesheet" href="/css/private.min.css" /><% } else if (sitetype === "blog") { %>
 <link rel="stylesheet" href="/css/blog.min.css" />
 <script type="text/javascript" src="/js/blog.min.js" defer></script>
