--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,6 +40,7 @@
             news.isArchiv = false; %>
             <%- include("./snippets/news.ejs", news) %>
             <a class="news-more special" href="/archiv">Mehr anzeigen</a>
+            <%- include("./snippets/insta.ejs") %>
             <h1 class="title">Terminkalender</h1>
             <ul class="calendar">
                 <%- include("./snippets/calendar.ejs", { events }); %>
