--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,10 @@
+@use "../styles/index";
+
 main {
     min-height: 100vh;
+
+    &::before {
+        content: "";
+        height: var(--header-height);
+    }
 }
