Fixed the news layout a little Added new logo types

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1357,10 +1357,9 @@ p.news-a-t {
 
 .news {
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: space-between;
     margin: var(--basic-margin);
-    min-height: 65vh;
     background-color: var(--background-200);
 }
 
@@ -1369,7 +1368,7 @@ p.news-a-t {
     padding-right: 5vw;
     box-sizing: border-box;
     width: 100%;
-    min-height: 65vh;
+    height: 100%;
 }
 
 .news-div:has(.news-cta) {
@@ -1380,8 +1379,9 @@ p.news-a-t {
 .news-img {
     display: block;
     width: 50%;
-    height: 65vh;
+    max-height: 65vh;
     object-fit: cover;
+    object-position: center;
 }
 
 .news-img.news-left {
@@ -2331,7 +2331,6 @@ select.donate-input {
 
     .news > .news-div {
         height: auto;
-        min-height: unset;
     }
 
     .news-img {
@@ -2383,7 +2382,6 @@ select.donate-input {
 
     .news > .news-div {
         height: auto;
-        min-height: unset;
     }
 
     .news-img {
@@ -2475,7 +2473,6 @@ select.donate-input {
 
     .news > .news-div {
         height: auto;
-        min-height: unset;
     }
 
     .news-img {
