Moved donations and membership to their own page Formatted files Now storing all stripe events in the database

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="/css/contact.min.css">
         <script type="text/javascript" src="/js/contact.min.js" defer></script>
     </head>
-    <body><% let link_mitglied; if (typeof user !== "undefined" && user !== null && user.valid) { link_mitglied = "/profile?exec=profileMembership" } else { link_mitglied = "/spenden#scrollToMembership"; }; %>
+    <body><% let link_mitglied; if (typeof user !== "undefined" && user !== null && user.valid) { link_mitglied = "/profile?exec=profileMembership" } else { link_mitglied = "/mitglied#scrollToMembership"; }; %>
        <%- include("./snippets/header.ejs", {
             link_mitglied
         }) %>
