--- a/views/bajaji.ejs
+++ b/views/bajaji.ejs
@@ -20,7 +20,7 @@
         </style>
     </head>
     <body>
-        <% let link_mitglied; if (typeof user !== "undefined" && user !== null && user.valid) { link_mitglied = "/profile?exec=profileMembership" } else { link_mitglied = "/spenden#scrollToMembership"; }; %>
+        <% let link_mitglied; if (typeof user !== "undefined" && user !== null && user.valid) { link_mitglied = "/profile?exec=profileMembership" } else { link_mitglied = "/mitglied#scrollToMembership"; }; %>
         <%- include("./snippets/header.ejs", {
             link_mitglied
         }) %>
