Formatted all files Installed timonjs as a dependency Changed the license in package.json Added some more logos Added cors Added the themeswitch

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -72,7 +72,7 @@
                     <span class="invisible">Turn on Darkmode</span>
                 </button>
                 <a class="data-tooltip uiverse contact" [routerLink]="'/contact'" [attr.data-tooltip-content]="'Kontakt'">
-                    <img class="contact-image" alt="Kontakt" src="/img/svg/personal.svg">
+                    <img class="contact-image" alt="Kontakt" src="/img/svg/personal.svg" />
                 </a>
             </div>
         </div>
