--- a/src/app/components/theme-switch/theme-switch.component.html
+++ b/src/app/components/theme-switch/theme-switch.component.html
@@ -1,5 +1,5 @@
 <label for="darkmode" class="uiverse ui-switch">
-    <input id="darkmode" name="darkmode" type="checkbox" class="uiverse" />
+    <input id="darkmode" name="darkmode" type="checkbox" class="uiverse" (click)="toggleTheme()" />
     <div class="uiverse slider">
         <div class="uiverse circle"></div>
     </div>
