Changed the order of the social media banner Added the meducation logo

--- a/views/snippets/nav.ejs
+++ b/views/snippets/nav.ejs
@@ -51,7 +51,7 @@
                                     <a href="/projects/gynäkologie">Twenty4Forty</a>
                                 </li>
                                 <li class="mit-bild">
-                                    <img alt="Meducation Logo" src="/img/logo.svg">
+                                    <img alt="Meducation Logo" src="/img/regular/meducation.jpg">
                                     <a href="/projects/meducation">Meducation</a>
                                 </li>
                                 <li class="mit-bild">
@@ -180,7 +180,7 @@
                                     <a href="/projects/gynäkologie">Twenty4Forty</a>
                                 </li>
                                 <li class="mit-bild">
-                                    <img alt="Meducation Logo" src="/img/logo.svg">
+                                    <img alt="Meducation Logo" src="/img/regular/meducation.jpg">
                                     <a href="/projects/meducation">Meducation</a>
                                 </li>
                                 <li class="mit-bild">
@@ -308,7 +308,7 @@
                             <a href="/projects/gynäkologie">Twenty4Forty</a>
                         </li>
                         <li class="mit-bild">
-                            <img alt="Meducation Logo" src="/img/logo.svg">
+                            <img alt="Meducation Logo" src="/img/regular/meducation.jpg">
                             <a href="/projects/meducation">Meducation</a>
                         </li>
                         <li class="mit-bild">
