Fixed issue #56 Added the media query

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2558,6 +2558,10 @@ select.donate-input {
         grid-area: unset;
     }
 
+    .mobile-donation {
+        display: flex;
+    }
+
     .donate-amount {
         width: 90%;
         margin: 20px 5vw;
